--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -301,12 +301,27 @@
                         @include span-col(10);
                         // @include push-col(0);
                     }
+
+                    header {
+                        @include breakpoints("tablet") {
+                            @include push-col(4);
+                        }
+                    }
+
+                    .content {
+                        &__copy {
+                            @include breakpoints("tablet") {
+                                @include span-col(8);
+                                @include push-col(4);
+                            }
+                        }
+                    }
                 }
 
                 &__last {
                     @include span-col(12);
 
-                    @include breakpoints("tablet") {
+                    @include breakpoints("laptop") {
                         @include span-col(5);
                         @include push-col(1);
                     }
@@ -318,7 +333,7 @@
                     }
 
                     &-image {
-                        @include breakpoints("tablet") {
+                        @include breakpoints("laptop") {
                             @include span-col(5);
                             @include push-col(1);
                         }
@@ -356,6 +371,10 @@
     &__copy-section {
         position: relative;
         padding: 80px 0 40px;
+
+        &.-image-right {
+            padding-top: 0;
+        }
 
         @include breakpoints("sm-tablet") {
             @include span-col(10);
@@ -411,7 +430,7 @@
                     &-reverse {
                         flex-direction: column-reverse;
 
-                        @include breakpoints("tablet") {
+                        @include breakpoints("laptop") {
                             flex-direction: initial;
                         }
                     }
@@ -474,7 +493,7 @@
                 .-image {
                     @include span-col(12);
 
-                    @include breakpoints("tablet") {
+                    @include breakpoints("laptop") {
                         @include span-col(4);
                     }
                 }
@@ -482,7 +501,7 @@
                 .-content {
                     @include span-col(12);
 
-                    @include breakpoints("tablet") {
+                    @include breakpoints("laptop") {
                         @include span-col(7);
                         @include push-col(1);
                     }
@@ -654,11 +673,13 @@
         }
 
         &.-half {
-            min-width: 0;
-            flex-grow: 0;
-            flex-shrink: 0;
-            flex-basis: calc(50% - 12px);
-            max-width: calc(50% - 12px);
+            @include breakpoints("tablet") {
+                min-width: 0;
+                flex-grow: 0;
+                flex-shrink: 0;
+                flex-basis: calc(50% - 12px);
+                max-width: calc(50% - 12px);
+            }
         }
 
         img {
@@ -786,7 +807,10 @@
                 position: relative;
 
                 &.-dot-grid {
-                    @include breakpoints("tablet") {
+                    display: none;
+
+                    @include breakpoints("laptop") {
+                        display: block;
                         position: absolute;
                         left: -432px;
                         top: -156px;
@@ -794,7 +818,7 @@
                 }
 
                 &.-student-homework {
-                    @include breakpoints("tablet") {
+                    @include breakpoints("laptop") {
                         right: -720px;
                     }
                 }
@@ -802,8 +826,9 @@
                 &.-feed-lockup {
                     @include span-col(10);
                     margin: 48px auto 16px;
+                    text-align: center;
 
-                    @include breakpoints("tablet") {
+                    @include breakpoints("laptop") {
                         left: 212px;
                         position: absolute;
                         top: -36px;
