--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -49,6 +49,11 @@
 
         img {
             display: inline-block;
+            max-height: 400px;
+
+            @include breakpoints("tablet") {
+                max-height: 700px;
+            }
         }
     }
 
@@ -69,7 +74,7 @@
                 display: none;
                 z-index: -1;
 
-                @include breakpoints("laptop") {
+                @include breakpoints("desktop") {
                     display: block;
                 }
 
@@ -83,23 +88,33 @@
             .-sticker {
                 position: absolute;
                 display: none;
-                top: 42%;
-                left: 50%;
 
                 @include breakpoints("tablet") {
                     display: block;
+                    top: 42%;
+                    left: 50%;
+                }
+
+                @include breakpoints("laptop") {
+                    top: 42%;
+                    left: 50%;
                 }
             }
 
             .-banner {
                 position: absolute;
                 top: -180px;
-                right: 40px;
                 display: none;
                 z-index: -1;
 
                 @include breakpoints("tablet") {
                     display: block;
+                    right: -274px;
+                }
+
+                @include breakpoints("laptop") {
+                    top: -180px;
+                    right: 40px;
                 }
             }
 
@@ -145,6 +160,16 @@
                     top: auto;
                     right: auto;
                 }
+            }
+
+            &.-beer-stickers {
+                @include breakpoints("tablet") {
+                    margin-bottom: 180px;
+                }
+            }
+
+            @include breakpoints("tablet") {
+                margin-top: 120px;
             }
         }
 
@@ -397,6 +422,19 @@
         // }
 
         &.-body-intro {
+            @include breakpoints("desktop") {
+                @include push-col(1);
+            }
+
+            &.-cca {
+                @include breakpoints("tablet") {
+                    padding-bottom: 30px;
+                }
+                @include breakpoints("laptop") {
+                    padding-bottom: 120px;
+                }
+            }
+
             header {
                 @include breakpoints("tablet") {
                     @include span-col(10);
@@ -412,7 +450,7 @@
             }
 
             .content__copy {
-                @include breakpoints("tablet") {
+                @include breakpoints("desktop") {
                     @include span-col(8);
                 }
             }
@@ -443,10 +481,10 @@
             &-padding {
                 &__top {
                     &-none {
-                        padding-top: 0;
+                        padding-top: 0 ;
 
-                        @include breakpoints("tablet") {
-                            padding: 252px 0;
+                        @include breakpoints("desktop") {
+                            padding: 120px 0;
                         }
                     }
                 }
@@ -518,14 +556,14 @@
 
             @include breakpoints("tablet") {
                 @include span-col(10);
-                @include push-col(3);
+                @include push-col(2);
                 @include font-size(60px);
                 @include line-height(65px);
                 margin-bottom: 48px;
             }
 
             @include breakpoints("desktop") {
-                @include push-col(2);
+                @include push-col(3);
             }
 
             &.-no-push {
@@ -602,6 +640,12 @@
                     @include font-size(12px);
                     margin-bottom: 0;
                 }
+
+                @include breakpoints("desktop") {
+                    @include push-col(1);
+                    @include font-size(12px);
+                    margin-bottom: 0;
+                }
             }
 
             &__image {
@@ -623,7 +667,8 @@
                 }
 
                 @include breakpoints("desktop") {
-                    @include push-col(2);
+                    @include span-col(8);
+                    @include push-col(3);
                 }
 
                 &.-left {
