--- a/src/assets/scss/00_base/_settings.scss
+++ b/src/assets/scss/00_base/_settings.scss
@@ -65,6 +65,7 @@ $breakpoints: (
     "sm-desktop": 1080px,
     "desktop":    1180px,
     "lg-desktop": 1450px,
+    "xl-desktop": 1800px,
 );
 $font-sizes: (
     "largest":      85px,
