--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -189,16 +189,6 @@
             }
         }
 
-        &.-blue-blob {
-            right: 60px;
-            top: 100px;
-            display: none;
-
-            @include breakpoints("tablet") {
-                display: block;
-            }
-        }
-
         &.-eye-doodles {
             right: -160px;
             top: 10px;
@@ -211,6 +201,11 @@
         &.-matrix {
             right: 80px;
             top: 60px;
+        }
+
+        &.-green-paint {
+            top: 0;
+            right: 0;
             display: none;
 
             @include breakpoints("tablet") {
@@ -218,9 +213,27 @@
             }
         }
 
-        &.-green-paint {
-            top: 0;
+        &.-orangsicle {
             right: 0;
+        }
+
+        &.-pink-elephant {
+            right: 60px;
+            display: none;
+
+            @include breakpoints("tablet") {
+                display: block;
+            }
+        }
+
+        &.-blue-blob {
+            right: 28%;
+            top: 160px;
+            display: none;
+
+            @include breakpoints("tablet") {
+                display: block;
+            }
         }
 
         // &.-jigglydoo {
