--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -163,6 +163,15 @@
     &__titles {
         max-width: 690px;
         width: 100%;
+
+        .-fade {
+            opacity: 0;
+            transition: all 0.6s ease;
+
+            &.-visible {
+                opacity: 1;
+            }
+        }
     }
 
     &__subtitles {
