--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -167,9 +167,12 @@
         .-fade {
             opacity: 0;
             transition: all 0.6s ease;
+            position: relative;
+            top: 80px;
 
             &.-visible {
                 opacity: 1;
+                top: 0;
             }
         }
     }
@@ -191,6 +194,16 @@
             top: 0;
             right: 0;
             width: 800px;
+            display: none;
+
+            @include breakpoints("tablet") {
+                display: block;
+            }
+        }
+
+        &.-blue-blob-two {
+            right: 60px;
+            top: 100px;
             display: none;
 
             @include breakpoints("tablet") {
