--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -211,7 +211,7 @@
             }
         }
 
-        &.-eye-doodles {
+        &.-doodles {
             right: -160px;
             top: 10px;
 
