--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -112,7 +112,7 @@
                     right: -274px;
                 }
 
-                @include breakpoints("laptop") {
+                @include breakpoints("desktop") {
                     top: -180px;
                     right: 40px;
                 }
@@ -238,6 +238,7 @@
                 @include breakpoints("laptop") {
                     display: block;
                     top: 10px;
+                    right: -104px;
                 }
             }
 
@@ -249,7 +250,7 @@
                 @include breakpoints("laptop") {
                     display: block;
                     top: 280px;
-                    right: -40px;
+                    right: -120px;
                     left: auto;
                 }
             }
@@ -356,7 +357,7 @@
                 &__last {
                     @include span-col(12);
 
-                    @include breakpoints("lg-laptop") {
+                    @include breakpoints("sm-desktop") {
                         @include span-col(5);
                         @include push-col(1);
                     }
@@ -368,7 +369,7 @@
                     }
 
                     &-image {
-                        @include breakpoints("lg-laptop") {
+                        @include breakpoints("sm-desktop") {
                             @include span-col(5);
                             @include push-col(1);
                         }
@@ -389,7 +390,7 @@
                 padding: 120px 0;
             }
 
-            @include breakpoints("laptop") {
+            @include breakpoints("lg-laptop") {
                 padding: 252px 0;
             }
 
@@ -443,7 +444,7 @@
                 @include breakpoints("tablet") {
                     padding-bottom: 30px;
                 }
-                @include breakpoints("laptop") {
+                @include breakpoints("lg-laptop") {
                     padding-bottom: 120px;
                 }
             }
@@ -531,9 +532,9 @@
             }
 
             .content__copy {
-                padding: 80px 0;
+                padding: 80px 0 120px;
 
-                @include breakpoints("laptop") {
+                @include breakpoints("xl-desktop") {
                     padding: 252px 0 150px;
                 }
             }
@@ -719,6 +720,14 @@
         .kd-image {
             @include breakpoints("laptop") {
                 text-align: center;
+            }
+        }
+
+        .-white-sketches {
+            img {
+                @include breakpoints("laptop") {
+                    width: 325px;
+                }
             }
         }
 
