--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -39,11 +39,6 @@
                 position: relative;
                 top: -8px;
             }
-
-            // @include breakpoints("laptop") {
-            //     @include span-col(6);
-            //     @include font-size(24px);
-            // }
         }
 
         .o-hero__list {
@@ -138,10 +133,6 @@
             @include breakpoints("tablet") {
                 padding: 120px 0;
             }
-
-            // @include breakpoints("tablet") {
-            //     padding: 270px 0;
-            // }
         }
     }
 
@@ -152,27 +143,31 @@
     &__top {
         @include clearfix();
         margin-bottom: 84px;
-        padding-top: 160px;
+        height: 100vh;
 
         @include breakpoints("tablet") {
-            margin-bottom: 200px;
-            padding-top: 700px;
+            margin-bottom: 280px;
         }
     }
 
     &__titles {
         max-width: 690px;
         width: 100%;
+        position: absolute;
+        top: calc(100vh - 200px);
 
         .-fade {
-            opacity: 0;
-            transition: all 0.6s ease;
-            position: relative;
-            top: 80px;
+            animation: fadeInAnimation ease 6s;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+        }
 
-            &.-visible {
+        .-scroll-fade {
+            opacity: 0;
+            transition: all .6s ease;
+
+            &.-active {
                 opacity: 1;
-                top: 0;
             }
         }
     }
@@ -184,6 +179,7 @@
     &__background {
         position: absolute;
         mix-blend-mode: multiply;
+        opacity: 0;
 
         &.-drops {
             left: 50%;
@@ -257,105 +253,6 @@
                 display: block;
             }
         }
-
-        // &.-jigglydoo {
-        //     right: auto;
-        //     left: 0;
-        //     top: 60px;
-        //     max-width: 75%;
-
-        //     @include breakpoints("tablet") {
-        //         right: -24px;
-        //         left: auto;
-        //         top: -54px;
-        //         max-width: 800px;
-        //     }
-        // }
-
-        // &.-blinky {
-        //     left: 56%;
-        //     top: 120px;
-        //     width: 40px;
-        //     display: none;
-
-        //     @include breakpoints("tablet") {
-        //         display: block;
-        //         left: 40%;
-        //         top: 80px;
-        //         width: auto;
-        //     }
-        // }
-
-        // &.-terrazo {
-        //     display: none;
-        //     right: -130px;
-        //     top: 100px;
-        //     width: 260px;
-
-        //     @include breakpoints("tablet") {
-        //         display: block;
-        //         right: 0;
-        //         top: 100px;
-        //         width: auto;
-        //     }
-        // }
-
-        // &.-greenbrush {
-        //     display: none;
-        //     left: 0;
-        //     bottom: 20%;
-
-        //     @include breakpoints("tablet") {
-        //         display: block;
-        //     }
-        // }
-
-        // &.-greenblob {
-        //     display: block;
-        //     right: 70px;
-        //     top: 360px;
-        //     z-index: 1;
-        //     width: 92px;
-
-        //     @include breakpoints("tablet") {
-        //         width: auto;
-        //         right: 180px;
-        //         top: 460px;
-        //     }
-        // }
-
-        // &.-dots {
-        //     top: 110px;
-        //     right: auto;
-        //     left: 70px;
-        //     width: 112px;
-
-        //     @include breakpoints("tablet") {
-        //         top: -40px;
-        //         left: auto;
-        //         right: 24%;
-        //         width: auto;
-        //     }
-        // }
-
-        // &.-circles-crosses {
-        //     display: none;
-        //     bottom: 0;
-        //     left: 260px;
-
-        //     @include breakpoints("tablet") {
-        //         display: block;
-        //     }
-        // }
-
-        // &.-blue-paint {
-        //     display: none;
-        //     right: 506px;
-
-        //     @include breakpoints("tablet") {
-        //         display: block;
-        //     }
-        // }
     }
 
     h1 {
@@ -377,10 +274,6 @@
 
     h3 {
         margin: 40px 0 80px 0;
-
-        @include breakpoints("tablet") {
-            margin: 0 0 280px 0;
-        }
     }
 
     h6.-vert {
@@ -409,7 +302,7 @@
 
         @include breakpoints("tablet") {
             display: block;
-            margin-top: 180px;
+            margin-top: 100px;
         }
 
         &.-before {
@@ -447,12 +340,13 @@
         }
     }
 
-    @keyframes move {
-        0%   { transform: scale(1)   translate(0, 0); stroke: var(--firstColor); }
-        25%  { transform: scale(0.8) translate(5vw, 10vh); stroke: var(--secondColor); }
-        50%  { transform: scale(0.6) translate(15vw, 5vh); stroke: var(--thirdColor); }
-        75%  { transform: scale(0.8) translate(5vw, 10h); stroke: var(--fourthColor); }
-        100% { transform: scale(1)   translate(0, 0); stroke: var(--firstColor); }
+    @keyframes fadeInAnimation {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
     }
 
 }
